--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
     "mathjax": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "react": "^18.2.0",
